examples/test/testpolicy1403.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1403
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key5: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value9
          key2: value39
          key4: value11
      podSelector:
        matchLabels:
          key16: value1
          key35: value20
          key1: value33
